@@ -11,8 +11,8 @@ AUX mixxx-9999-docs.patch 438 SHA256 19377d095e34071010ddda59b03b86a63b82f2663dc
 AUX mixxx-9999-no-bzr.patch 1598 SHA256 2811df95e2d305efccdeb5c86bde702bfe9d26e0594943bd124c20b4d61c63c0 SHA512 622e1520ca6cf40e99d89b9359a91e1b14435e09c5271dbb42ef65ed3695257ac98234c13129c5f2df1b792317ca80175ef0a3f51ff6470b2097812e6bd9d14b WHIRLPOOL f4a08c38655b3a4f2d12d3fc1ec57609ccd73d15386eea85b214f24580d6d0f9cd97f3e472a13a2d4dcca2da5de10e9e3a05df8c9d22455e6bbb23c49e295a97
 AUX mixxx-9999-system-libs.patch 8072 SHA256 996c6a170e06a5b4b0250f6fcefd80be8cb6d51325ee19c231360f1892567cb1 SHA512 d8d6ab9162b365288e224bfe2611c3322d539e35284c26ede0c829a29508a1047ad8e28c08bc769a0c72bfc70e69ebca71ac8e0217fb78c5904582153c1ae267 WHIRLPOOL 0fffac4355f882e01fefaaca19cdbf9cc048d1ef6892f2451c7e7163ad19fa17e41685980acb8cd62d4530010f3ec88db8962827d35fb9f9ec5ff564adaafa89
 DIST mixxx-1.11.0-src.tar.gz 24473835 SHA256 00961b5d6c1e6d6686d76e55de474b943bbeff4e59b163dddd3d9940dc1b0331 SHA512 a42c2e3a648986e401f9812315942b5c68e0bc4f47ce867eb043d64f9d7836860e414b04b5e5da52b0541da5069d231774f30e965bcf3bd0db09f6bca74876c2 WHIRLPOOL 9ab4de6bfa5840500f04a4e7d523b6546e0ef08ade017f14b73425e205f039a6da11604f2b0e902085ff3062fff451385f984735029592d4b10ac3d4e0c985b1
-EBUILD mixxx-1.11.0.ebuild 2275 SHA256 7d244772ffe10fab1a1bbbda1da69a98239a25e2574c04cd3a40ffa16c7f1c36 SHA512 d0eb33e1a09a45b1e557976fa3899e3d325d36c06c26cd12dacb9c96ae183b16be3666d1c92fe16864652a0da8fc7bacc8e0e6a14d5b9dbb006c14b5d04976e8 WHIRLPOOL a536cb15e7544857c6c9f24f39c40fe451e39d03482422709ada6ed59d2173b14be900f3b8e8dd4da0d23dd8d19547b65bf7d056b75485e23eb36785e938df88
-EBUILD mixxx-1.11.9999.ebuild 2235 SHA256 c60845f8b858009f1a2f75f67251c615bf3a6c8698844596f7b53bb85d00a917 SHA512 a62227a4c01d2a8c9651204aac8fec5f7dcc3246d276364dc57eb9803eb078a382d21fcc98023fa6925379c17a5160f1676110af3727c38aa86b98c2c5bed525 WHIRLPOOL 61884b14fda31f98f1637dadba8483d2af6ac5dfeea1b9346775f6b187096ef90b433e8373d178f1770a7b48b05cd30201c2703e9e7efe2920089a4991d8ae03
-EBUILD mixxx-9999.ebuild 2273 SHA256 70162fba55c3158263d5a812c032b86d1c2929496ba3579d11bed82a1a5a0785 SHA512 5818b65cdc2e3051887849893257f673523ce41d3c73e4585db3e442f9e022472be8ea857faa544327ff468fc98120ab506a9941506a3c88d69d6302fc9117ed WHIRLPOOL b61f7bdfb0ef74744753b54192453c6c4cbf75e00781f393e12941acdef3f26cd8c44b744066edf4c7a8015f6a80e7a058b230d32cbbd3a7b767dccf47682e13
-MISC ChangeLog 6124 SHA256 4678beb53d0bf68d87ba7567e52044a4834444fd49fd647b9b071517ea0f00a6 SHA512 135f2a7f37be8a48d41739e74953de49aaa66462dbcf24d2e5e1cc70f1b769be542b0a2bb2ce5411346d506db24a96b0a4dc8fb1cc5a996266aa9c6a6ca4e39c WHIRLPOOL 831492c9ad589b07ea537dab72d5c734eb35b95e4cf7c0298c43641b78054a3ba3f4392040ea49b30ee22a9d8a6a076e3aade2c9b07e74b20ae077d37e1e853a
+EBUILD mixxx-1.11.0.ebuild 2272 SHA256 64a3e2937a4ee08b7ef24488933355b59b3def84f5aeddabd0353d4482984f84 SHA512 6125b3112828dd6f8417dff96f8fec7229fb2237106d33d32b967922d8b17acb1dce5d79cab641c72935d1a7a04255f3123f3b1262d33427cef47f319a32ce74 WHIRLPOOL d6e9fe781600586cd7c94cc9b2cf063e7620261bbe180014aad56003e839f4df10f1b27d2ed063b353dd06079e82af4ef2d14b2a97d9fbfa22fc4f6840696662
+EBUILD mixxx-1.11.9999.ebuild 2232 SHA256 4e15911d8f7277aa560c0cd4e3b8345d39a530c769d83ffe219600e8ec4e067f SHA512 195ec93322cb97dd34f6d0239236e777eda404fc313fad3b482406383e4250654fe9b416bcda90ef9610e0f9e244901a8a187911142e371c368ca7146c5b60e8 WHIRLPOOL 170e0f02e7ec410f40598b9175fa23b909753c7b4b68a9a5892088e8553ed5ae330cfb37c5f26a0d7914578bb732671d57246764d02cf97847e5b3766fe75106
+EBUILD mixxx-9999.ebuild 2270 SHA256 1900bf23b92a9d8367bc684498c6c89c859568ed6c8f7da9905e9810d936c278 SHA512 43652d1949d20bd1cbd60574f82ea2d4017748cdf725ea42e7842689503e211d001b3ffb16f1ec9710df3b033d42dc98f3fd4ec66ff8d3cda93d467f4bd2c8e5 WHIRLPOOL 316ed8e9e8c64e5e94f9c51aa964e96fd252f30cc36caf123f9e542e445a33d430a3a5e522d3dd885eedafa0d41d7ba73627d4bc9debeb1eeabd5670cdb43b11
+MISC ChangeLog 6364 SHA256 35d14bbca6ae9906560b95f6851f966a8e428bb2d71446b76224a83b8c61f932 SHA512 e700894345d0aa61ad0d39af6aa1b2a1bb3395d9eb248c2f984681521d401b5028bf5131f80f8e4687b3d0f0b79d90c096cccb43b81ac0cd1bedd192791a2022 WHIRLPOOL 0ebc325ae5fcd7a048dd874baa417608209db07e783219ea839df5c58b51b093f3da6a70a45bda26ea0cd08649b08e3042c3d92860822b9a92130b0d2ec3e752
 MISC metadata.xml 485 SHA256 2d28e5b3222a404cd0ae26b12d70640ed15c665204a43496862b77f0396f2038 SHA512 cf3578bae5e75f6b5db4ca71cd00a9389878d87d0983b0c5e0b2858336bd30186df13c58b03b9f1f2e698b651d360058ed0ff63771be6ba98128ae30b886d7f7 WHIRLPOOL 275c04e470f80968e15e0c3ef77cfa4f6fe89917b01ce1d94ea7bebdfd30ee54baae32678d79e7d28dde24bd0f4ad1f8756f185638e77421ab22ebca8e42c555
