@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Jun 2013; Hakan Demiralp (keenblade) <keenblade@tuxfamily.org>
+  mixxx-1.11.0.ebuild, mixxx-1.11.9999.ebuild, mixxx-9999.ebuild:
+  mixxx: for all mixxx ebuilds, fidlib dependency version is adjusted to the
+  available portage version
+
 *mixxx-1.11.0 (23 May 2013)
 
   23 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
